--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -8,6 +8,8 @@
                  <th>ID</th>
                  <th>Content</th>
                  <th>Title</th>
+                 <th>Owner</th>
+                 <th>Commentaries</th>
              </tr>
             {% for post in post_list %}
                 <tr>
