--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -30,7 +30,7 @@
                         {{ post.commentaries.count }}
                     </td>
                     <td>
-                        {{ post.created_at }}
+                        {{ post.created_time }}
                     </td>
                 </tr>
                 {% endfor %}
